--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.13",
     "jsdom": "^21.0.0",
     "postcss": "^8.4.21",
+    "sass": "^1.58.3",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vitest": "^0.27.1"
